--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.17.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5"
   },
