--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "sweetalert2": "^11.16.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
