--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
@@ -17,6 +18,7 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "sweetalert2": "^11.16.1"
   },
